--- a/riskyjobs/search.html
+++ b/riskyjobs/search.html
@@ -9,10 +9,15 @@
   <img src="images/riskyjobs_title.gif" alt="Risky Jobs">
   <img src="images/riskyjobs_fireman.jpg" alt="Risky Jobs" style="float:right">
   <h3>Рискованные работы - Поиск</h3>
+<form method="get" action="registration.php">
+<input type="submit" name="submit" value="Регистрация">
+</form>
   <form method="get" action="search.php">
     <label for="usersearch">Найдите свою рискованную работу:</label><br>
     <input type="text" id="usersearch" name="usersearch"><br>
     <input type="submit" name="submit" value="Искать">
+    
   </form>
+
 </body>
 </html>
